Merged in feature/CAP-321_required-document-list (pull request #212)
CAP321 - Collect the correct list of required document from Stripe account

* CAP321 - Collect the correct list of required document from Stripe account

* CAP321 - Collect the correct list of required document from Stripe account - review remove sleep time

* CAP321 - Collect the correct list of required document from Stripe account - add additional comment

* Merged master into feature/CAP-321_required-document-list

Approved-by: jim.scarborough